--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.11",
+    "react-modal": "^3.16.1",
     "react-oidc-context": "^2.2.2",
     "react-pdf": "^7.2.0",
     "react-player": "^2.12.0",
