--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pdfobject": "^2.2.12",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-confetti": "^6.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
