--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.3.3",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
@@ -72,6 +73,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.3",
     "@types/react-relay": "14.1.3",
     "@types/relay-runtime": "14.1.10",
     "concurrently": "^8.0.1",
