--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "*.{ts,tsx,css,json}": "prettier --write"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.8",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
