--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "victory": "^36.6.10",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "graphql": "^15.0.0"
   },
   "devDependencies": {
     "@types/react-modal": "^3.16.3",
