--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-config-next": "13.3.0",
     "formik": "^2.4.3",
     "framer-motion": "^10.12.18",
+    "graphql": "^15.0.0",
     "is-hotkey": "^0.2.0",
     "lodash": "^4.17.21",
     "next": "13.4.7",
@@ -71,8 +72,8 @@
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "victory": "^36.6.10",
-    "yup": "^1.2.0",
-    "graphql": "^15.0.0"
+    "yaml": "^2.5.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react-modal": "^3.16.3",
